# fhevm-backend

./: .slither.config.json  README.md
fhevm-engine/: Cargo.toml
fhevm-engine/coprocessor/: Cargo.toml  Dockerfile  Dockerfile.db  Makefile  docker-compose.test.yml  docker-compose.yml  initialize_db.sh
fhevm-engine/coprocessor/.sqlx/: query-2c847888b29ab3da891269cf32379720e1f54ba1f1647383ffc7dfb60d2e9f11.json  query-5de980f4210928c7fc3a92d8afdd89e42fe0eb8e6d5f84807f09e257fd6a31ab.json  query-f657efb439ee13775b0aef8d623cb32fe443e01f110544405f3512c085025e83.json
fhevm-engine/coprocessor/benches/: dex.rs  erc20.rs  synthetics.rs  utils.rs
fhevm-engine/coprocessor/migrations/: 20241120173212_insert_test_tenant.down.sql
fhevm-engine/coprocessor/src/: db_queries.rs  server.rs  tfhe_worker.rs  tracing.rs  types.rs
fhevm-engine/coprocessor/src/tests/: errors.rs  inputs.rs  operators_from_events.rs  random.rs  scheduling_bench.rs  utils.rs
fhevm-engine/executor/: Cargo.toml
fhevm-engine/executor/src/: server.rs
fhevm-engine/executor/tests/: scheduling_mapping.rs  scheduling_patterns.rs  sync_compute.rs  test_gpu.rs
fhevm-engine/fhevm-db/: Dockerfile  initialize_db.sh
fhevm-engine/fhevm-db/migrations/: 20241120173212_insert_test_tenant.down.sql  20241120173212_insert_test_tenant.up.sql  20250207092623_verify_proofs.sql  20250217133315_add_table_seen_blocks.sql  20250303000000_add_compressed_server_key_in_tenants.sql  20250303_add_gpu_keys.sql  20250403084952_add_chain_id_column.sql
fhevm-engine/fhevm-engine-common/: Cargo.toml
fhevm-engine/fhevm-engine-common/src/: keys.rs  tenant_keys.rs  tfhe_ops.rs  types.rs  utils.rs
fhevm-engine/fhevm-go-coproc/: go.mod  go.sum
fhevm-engine/fhevm-go-coproc/fhevm/: fhelib.go  fhelib_ops.go
fhevm-engine/fhevm-go-native/: go.mod  go.sum
fhevm-engine/fhevm-go-native/fhevm/: api.go  fhelib.go  fhelib_ops.go  hashset.go
fhevm-engine/fhevm-keys/: .gitattributes
fhevm-engine/fhevm-listener/: Cargo.toml  build.rs  rustfmt.toml
fhevm-engine/fhevm-listener/.sqlx/: query-4e0ce7df2a289b0c6d820dcce85c7cf2788c3b3c0ee9a3547c0c66fb654f28b8.json  query-ebe3b6af8ef5e109d43b2c3abd5ec292b6bb1ecad66e2104ca070528e86a262f.json  query-f0d293ade1c5c2ad34a339b29097022305a63f3422f073106371d32738da8178.json  query-fd35a60a425bc200393e9f491e2727dffe0ac4cbdcb1ded5b9c6f4b7f837a907.json
fhevm-engine/fhevm-listener/contracts/: TFHEEvents.sol  TFHEExecutorTest.sol
fhevm-engine/fhevm-listener/src/cmd/: mod.rs
fhevm-engine/fhevm-listener/src/database/: mod.rs  tfhe_event_propagate.rs
fhevm-engine/fhevm-listener/tests/: integration_test.rs
fhevm-engine/listener/: Cargo.toml
fhevm-engine/scheduler/: Cargo.toml
fhevm-engine/scheduler/src/dfg/: scheduler.rs
fhevm-engine/sns-executor/: Cargo.toml  README.md
fhevm-engine/sns-executor/src/: aws_upload.rs  executor.rs  keyset.rs  lib.rs  switch_and_squash.rs
fhevm-engine/sns-executor/src/tests/: mod.rs
fhevm-engine/test-harness/src/: db_utils.rs  instance.rs
fhevm-engine/transaction-sender/: Cargo.toml  build.rs
fhevm-engine/transaction-sender/.sqlx/: query-7a671fa05e41ca1e4e309431ed38f70fdd1c9062e4bfae474938fd587313c74e.json  query-c6aff8c0303141a898c04d8ad9bbdbc02d7892292255207eb4ef7314016657e7.json
fhevm-engine/transaction-sender/contracts/: ZKPoKManager.sol
fhevm-engine/transaction-sender/src/: lib.rs  transaction_sender.rs
fhevm-engine/transaction-sender/src/ops/: add_ciphertext.rs  allow_handle.rs  (+2 more)
fhevm-engine/transaction-sender/tests/: add_ciphertext_tests.rs
fhevm-engine/zkproof-worker/: Cargo.toml
fhevm-engine/zkproof-worker/src/: auxiliary.rs  lib.rs  verifier.rs
(+137 files in other folders)
