[workspace]
resolver = "2"
members = ["coprocessor", "executor", "fhevm-engine-common", "fhevm-listener", 
            "gw-listener", "sns-executor", "transaction-sender", "zkproof-worker", "test-harness"]

[workspace.package]
authors = ["Zama"]
edition = "2021"
license = "BSD-3-Clause-Clear"

[workspace.dependencies]
alloy = { version = "0.11", features = ["full", "provider-anvil-api", "provider-anvil-node", "sol-types"] }
alloy-primitives = "0.8"
anyhow = "1.0"
aws-config = "1.6"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
daggy = "0.8"
foundry-compilers = { version = "0.13", features = ["svm-solc"] }
futures-util = "0.3"
hex = "0.4"
lru = "0.13"
opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.29"
prometheus = "0.14"
prost = "0.13"
rand = "0.9"
rayon = "1.10"
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
serial_test = "3.2"
sha3 = "0.10"
strum = { version = "0.26", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["macros", "migrate", "runtime-tokio", "tls-native-tls", "time", "postgres", "uuid"] }
testcontainers = "0.24"
thiserror = "2.0"
tfhe = { version = "=1.1.2", features = ["boolean", "shortint", "integer", "zk-pok", "experimental-force_fft_algo_dif4"] }
tfhe-versionable = "=0.5.0"
tokio = { version = "1.45", features = ["full"] }
tokio-util = "0.7"
tonic = { version = "0.12", features = ["server"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }

[profile.dev.package.tfhe]
overflow-checks = false

[profile.release]
opt-level = 3
lto = "fat"
