[package]
name = "listener"
version = "0.0.1"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "listen"
test = false
bench = false

[dependencies]
# workspace dependencies
alloy = { version = "0.9", features = ["contract", "json", "providers", "provider-ws", "pubsub", "rpc-types", "sol-types"] }
alloy-rpc-types = "0.11"
alloy-sol-types = "0.8"
alloy-primitives = "0.8"
alloy-provider = "0.11"
clap = { workspace = true }
futures-util = "=0.3"
lru = "0.13.0"
serde = { workspace = true }
sqlx = { version = "=0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] } # TO SHARE WITH fhevm-engine
tokio = { workspace = true }

# local dependencies
fhevm-engine-common = { path = "../fhevm-engine-common" }
