[package]
name = "transaction-sender"
version = "0.6.1"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# workspace dependencies
alloy = { workspace = true }
anyhow = { workspace = true }
aws-config = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }

# crates.io dependencies
async-trait = "0.1"
aws-sdk-kms = { version = "1.68", default-features = false }
rstest = "0.25"

# local dependencies
fhevm-engine-common = { path = "../fhevm-engine-common" }

[build-dependencies]
foundry-compilers = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
testcontainers = { workspace = true }
test-harness = { path = "../test-harness" }
